--- a/src/index.jade
+++ b/src/index.jade
@@ -2,6 +2,8 @@ doctype html
 html
   head
     meta(charset="UTF-8")
-    title Insert App Name Here
+    meta(http-equiv="X-UA-Compatible" content="IE=edge")
+    meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
+    title Art Of Metrics
   body
     my-app Loading...
