--- a/src/client/core/top-menu/top-menu.component.jade
+++ b/src/client/core/top-menu/top-menu.component.jade
@@ -1,6 +1,6 @@
 nav.navbar.navbar-light.bg-faded#top-menu
-  a.navbar-brand(href="#") {{ title }}
+  a.navbar-brand([routerLink]="homeHref") {{ title }}
   //- Nav links
   ul.nav.navbar-nav
     li.nav-item(*ngFor="let link of links")
-      a.nav-link(href="{{ link.href }}") {{link.name}}
+      a.nav-link([routerLink]="link.href") {{link.name}}
