--- a/src/client/core/view-wrapper/view-wrapper.jade
+++ b/src/client/core/view-wrapper/view-wrapper.jade
@@ -1,5 +1,5 @@
 div.loading-spinner
   div#spinner(*ngIf="viewState.state.hide")
     div.spinner
-  div.content([hidden]="!viewState.state.hide")
+  div.app-content([hidden]="viewState.state.hide")
     ng-content
