--- a/src/client/app/app.component.jade
+++ b/src/client/app/app.component.jade
@@ -1,5 +1,4 @@
-top-menu([title]="applicationTitle")
-view-wrapper
-  div.container-fluid
-    div.row
-      router-outlet
+div#app-component
+  top-menu([title]="applicationTitle")
+  view-wrapper
+    router-outlet
