--- a/src/client/core/top-menu/top-menu.component.styl
+++ b/src/client/core/top-menu/top-menu.component.styl
@@ -1,5 +1,8 @@
-@import '../../app/app.component';
 $navFontFamily = Monaco, Roboto, sans-serif
+$brand-nav-bg = #fff;
+
 #top-menu
   font-family $navFontFamily
   background-color $brand-nav-bg
+  display block
+  height 50px
