--- a/src/client/app/app.component.styl
+++ b/src/client/app/app.component.styl
@@ -1,3 +1,3 @@
-$brand-nav-bg = #fff;
-$brand-general-bg = #0BA2E7;
-
+#app-component
+  // Padding top is necessary because of fixed bootstrap header
+  padding-top 50px
