--- a/src/client/core/top-menu/top-menu.component.jade
+++ b/src/client/core/top-menu/top-menu.component.jade
@@ -1,6 +1,8 @@
-nav.navbar.navbar-light.bg-faded#top-menu
-  a.navbar-brand([routerLink]="homeHref") {{ title }}
-  //- Nav links
-  ul.nav.navbar-nav
-    li.nav-item(*ngFor="let link of links")
-      a.nav-link([routerLink]="link.href") {{link.name}}
+div#top-menu.navbar.navbar-default.navbar-fixed-top(role="navigation")
+  div.container
+    div.navbar-header
+      a.navbar-brand([routerLink]="homeHref") {{ title }}
+    //- //- Nav links
+    ul.nav.navbar-nav.navbar-right
+      li.nav-item(*ngFor="let link of links")
+        a.nav-link([routerLink]="link.href") {{link.name}}
