--- a/src/index.jade
+++ b/src/index.jade
@@ -1,11 +1,16 @@
 doctype html
-html
+html(lang="en")
   head
     base(href="/")
+
+    //- Meta tags
     meta(charset="UTF-8")
     meta(http-equiv="X-UA-Compatible" content="IE=edge")
     meta(name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no")
-
+    meta(name="apple-mobile-web-app-capable" content="yes")
+    meta(name="HandheldFriendly" content="True")
+    meta(name="apple-mobile-web-app-status-bar-style" content="black")
+    meta(property="og:locale", content="en_US")
     title Art Of Metrics
   body
     my-app Loading...
