--- a/src/client/auth/register/register-form.component.styl
+++ b/src/client/auth/register/register-form.component.styl
@@ -4,6 +4,12 @@
 .pointer
   cursor: pointer;
   
+.oauth-btn
+  display: block
+  width: 50%
+  margin: 0 auto
+  margin-bottom: 5px
+
 .register-form-component
   font-family: $brand-header-font
 
