playing around with sidebar

--- a/src/client/app/app.component.jade
+++ b/src/client/app/app.component.jade
@@ -1,4 +1,8 @@
 div#app-component
   top-menu([title]="applicationTitle" *ngIf="!isLoggedIn")
-  view-wrapper
-    router-outlet
+  ng-sidebar-container
+    ng-sidebar(([opened])="_opened")
+      a lol
+    view-wrapper
+
+      router-outlet
