--- a/src/index.jade
+++ b/src/index.jade
@@ -11,9 +11,13 @@ html(lang="en")
     meta(name="HandheldFriendly" content="True")
     meta(name="apple-mobile-web-app-status-bar-style" content="black")
     meta(property="og:locale", content="en_US")
+    link(href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet")
+    link(rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/css/materialize.min.css")
     title Art Of Metrics
   body
     my-app Loading...
     script(src="https://code.jquery.com/jquery-3.1.1.min.js"
       integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
       crossorigin="anonymous")
+    script(
+      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js")
