--- a/src/client/sidebar/sidebar.component.jade
+++ b/src/client/sidebar/sidebar.component.jade
@@ -3,3 +3,5 @@ ul.side-nav#aom-sidebar
     div.userView
       div.background
         img(src="http://artofmetrics.com/wp-content/uploads/2016/01/header-retina.png")
+  li
+    a#sidebar-logout((click)="logout()") Logout
