feat: add navigation on registration success

--- a/src/client/auth/register/register.component.jade
+++ b/src/client/auth/register/register.component.jade
@@ -1,5 +1,5 @@
 div.container-fluid
   div.row
     div.col-xs-6.col-xs-offset-3
-      register-form
+      register-form((onRegister)="onRegister(user)")
       
