--- a/src/client/auth/login/login-form.component.jade
+++ b/src/client/auth/login/login-form.component.jade
@@ -1,7 +1,7 @@
 div.header
   h3 Login
 
-form((ngSubmit)="onSubmit($event, form)" novalidate #form="ngForm")
+form((ngSubmit)="emailLogin($event, form)" novalidate #form="ngForm")
   div.row
     //- Email
     div.col.s12
