remove mongoose schema

--- a/src/client/auth/register/register.component.jade
+++ b/src/client/auth/register/register.component.jade
@@ -1,5 +1,5 @@
 div.container
   div.row
     div.col.s6.offset-s3
-      register-form((onRegister)="onRegister(user)")
+      register-form((onRegister)="onRegister($event)")
       
