--- a/src/client/dashboard/instructor/instructor-dashboard.component.jade
+++ b/src/client/dashboard/instructor/instructor-dashboard.component.jade
@@ -1,3 +1,8 @@
-div.container
-  div.row
-    div hi
+div.card-panel
+  div.section
+    instructor-description([instructor]="instructor")
+  div.divider
+  div.section
+    h4 My Courses
+    a.waves-effect.waves-circle.waves-light.btn-floating([routerLink]="'/course/new'")
+      i.material-icons add
