--- a/src/client/dashboard/user-dashboard.component.jade
+++ b/src/client/dashboard/user-dashboard.component.jade
@@ -1,3 +1,4 @@
 div.container
   div.row
-    student-dashboard([student]="user")
+    student-dashboard([student]="user" *ngIf="isStudent")
+    instructor-dashboard(*ngIf="!isStudent" [instructor]="user")
