chore: remove container-fluid

--- a/src/client/home/home.jade
+++ b/src/client/home/home.jade
@@ -1,7 +1,7 @@
 
 
 //- Section one: Introductory / Explanatory text
-div.container-fluid#home-section-one
+div#home-section-one
   //- Header Row
   div.row
     //div.col-xs-6.col-xs-offset-3.text-center
@@ -18,7 +18,7 @@ div.container-fluid#home-section-one
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
 
 //- Section two: New User / Signup
-div.container-fluid#home-section-two
+div#home-section-two
   div.row
     //div.col-xs-6.col-xs-offset-3.text-center.padded
     div.col.s6.offset-s3.center-align.padded
@@ -27,7 +27,7 @@ div.container-fluid#home-section-two
       p Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
 
 //- Section three: Courses
-div.container-fluid#home-section-three
+div#home-section-three
   div.row
     //div.col-xs-6.col-xs-offset-3.text-center.padded
     div.col.s6.offset-s3.center-align.padded
