--- a/src/client/core/top-menu/top-menu.component.jade
+++ b/src/client/core/top-menu/top-menu.component.jade
@@ -2,7 +2,7 @@ div#top-menu.navbar.navbar-default.navbar-fixed-top(role="navigation")
   div.container
     div.navbar-header
       a.navbar-brand([routerLink]="homeHref") {{ title }}
-    //- //- Nav links
+    //- Nav links
     ul.nav.navbar-nav.navbar-right
       li.nav-item(*ngFor="let link of links")
         a.nav-link([routerLink]="link.href") {{link.name}}
