ability to statically add modules

--- a/src/client/courses/instructor/edit-course/edit-course.component.jade
+++ b/src/client/courses/instructor/edit-course/edit-course.component.jade
@@ -2,3 +2,10 @@
 div.container(*ngIf="!!this.course")
   div.row
     h3 {{ course.data.name }}
+  
+  div.row
+    div((click)="addModule()")
+      i.material-icons add
+  //- Modules
+  div.row(*ngFor="let module of course.data.modules")
+    h3 {{ module.name || 'lol' }}
