feat: Add Module Name and Description ngModels

--- a/src/client/courses/instructor/edit-course/edit-course.component.jade
+++ b/src/client/courses/instructor/edit-course/edit-course.component.jade
@@ -7,5 +7,6 @@ div.container(*ngIf="!!this.course")
     div((click)="addModule()")
       i.material-icons add
   //- Modules
-  div.row(*ngFor="let module of course.data.modules")
-    h3 {{ module.name || 'lol' }}
+  div.row(*ngFor="let module of course.data.modules; let i = index")
+    h3 {{ module.name }}
+    edit-module([module]="module" [idx]="i")
