feat: load courses and loop through them on instructor dashboard

--- a/src/client/dashboard/instructor/instructor-dashboard.component.jade
+++ b/src/client/dashboard/instructor/instructor-dashboard.component.jade
@@ -6,3 +6,8 @@ div.card-panel
     h4 My Courses
     a.waves-effect.waves-circle.waves-light.btn-floating([routerLink]="'/course/new'")
       i.material-icons add
+    div.divider
+
+    //- Loops over courses and displays them in a row
+    div(*ngFor="let course of courses")
+      a([routerLink]="'/course/' + course.slug + '/edit'") {{ course.data.name }}
