--- a/src/client/core/top-menu/top-menu.component.styl
+++ b/src/client/core/top-menu/top-menu.component.styl
@@ -11,12 +11,15 @@ MaxSize = 64px
 .nav-wrapper
   height MaxSize
   padding 0
-  margin 0
+  margin 0 0 0 2px
 
 .navbar-fixed .nav-wrapper .brand-logo img
   width auto
   height auto
   max-width MaxSize
   max-height MaxSize
-  border 1px solid black
+  border 2px solid #000
+  border-radius 3px
+  padding 2px
+  margin 2px
   vertical-align top
