begin adding lessons

--- a/src/client/courses/instructor/edit-module/edit-module.component.jade
+++ b/src/client/courses/instructor/edit-module/edit-module.component.jade
@@ -1,1 +1,10 @@
-div hi
+
+div(*ngIf="module")
+  p {{ module.name }}
+
+  div(*ngFor="let lesson of module.lessons")
+    p {{ lesson.name }}
+  
+  button.btn.btn-waves(
+    (click)="addLesson()"
+    [disabled]="!canAddLesson()") Add Lesson
