--- a/src/client/courses/instructor/edit-lesson/edit-lesson.component.jade
+++ b/src/client/courses/instructor/edit-lesson/edit-lesson.component.jade
@@ -1,1 +1,14 @@
-div hi
+
+div#edit-lesson-component(*ngIf="lesson")
+  //- Lesson Name
+  div#edit-lesson-name
+    h4 {{ lesson.name }}
+  
+  //- Drips
+  div#edit-lesson-drips
+    div(*ngFor="let drip of lesson.drips")
+      h6 {{ drip.title }}
+      button.btn.btn-waves((click)="editDrip(drip)") Edit Drip
+      button.btn.btn-waves((click)="deleteDrip(drip)") Delete Drip
+    div#add-drip
+      button.btn.btn-waves((click)="addDrip()") Add Drip
