--- a/src/client/courses/instructor/edit-lesson/edit-drip.component.jade
+++ b/src/client/courses/instructor/edit-lesson/edit-drip.component.jade
@@ -10,9 +10,23 @@ div.edit-drip-component
       label(for="drip-title") Title
     
     //- Quiz
-    div((click)="addQuestionQuiz()")
+    div.btn.btn-waves((click)="addQuestionQuiz()" *ngIf="!drip.questionQuiz")
+      | Add Multiple Choice Quiz
     div(*ngIf="drip.questionQuiz")
-      p {{ drip.questionQuiz}}
+      div.input-field
+        textarea#drip-question-quiz.materialize-textarea(
+          [(ngModel)]="drip.questionQuiz.question"
+          name="drip-question-quiz"
+        )
+        label(for="drip-question-quiz") Multiple Choice Quiz
+        div(*ngFor="let answer of drip.questionQuiz.answers; let i = index;")
+          div.input-field
+            input(
+              name="qq-answer-{{i}}"
+              type="text"
+              [(ngModel)]="drip.questionQuiz.answers[i]"
+            )
+        div.btn.btn-waves((click)="addQuestionQuizAnswer()") Add Answer
     //- Drip text
     div.input-field
       textarea(
