--- a/src/index.jade
+++ b/src/index.jade
@@ -22,3 +22,4 @@ html(lang="en")
     script(
       src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js")
     script(src="/vendor/ckeditor/ckeditor.js")
+    script(src="https://js.stripe.com/v3/")
