take course module

--- a/src/client/courses/course-view.component.jade
+++ b/src/client/courses/course-view.component.jade
@@ -1,3 +1,4 @@
 
 div.loaded(*ngIf="course")
-  preview-course([course]="course")
+  preview-course([course]="course" *ngIf="!isSubscribed()")
+  take-course([course]="course" *ngIf="isSubscribed()")
