add r and stata module arrays

--- a/src/client/courses/instructor/edit-course/edit-course.component.jade
+++ b/src/client/courses/instructor/edit-course/edit-course.component.jade
@@ -7,6 +7,6 @@ div.container(*ngIf="!!this.course")
     div((click)="addModule()")
       i.material-icons add
   //- Modules
-  div.row(*ngFor="let module of course.data.modules; let i = index")
+  div.row(*ngFor="let module of course.data.modules[language]; let i = index")
     h3 {{ module.name }}
     module-row([module]="module" [idx]="i" [course]="course")
