feat: begin working on payments

--- a/src/client/courses/instructor/edit-course/edit-course.component.jade
+++ b/src/client/courses/instructor/edit-course/edit-course.component.jade
@@ -2,11 +2,11 @@
 div.container(*ngIf="!!this.course")
   div.row
     h3 {{ course.data.name }}
-  
+    toggle-language((toggleLanguage)="setLanguage($event)")
   div.row
     div((click)="addModule()")
       i.material-icons add
   //- Modules
   div.row(*ngFor="let module of course.data.modules[language]; let i = index")
     h3 {{ module.name }}
-    module-row([module]="module" [idx]="i" [course]="course")
+    module-row([module]="module" [idx]="i" [course]="course" [language]="language")
