--- a/src/client/courses/instructor/edit-module/edit-module.component.jade
+++ b/src/client/courses/instructor/edit-module/edit-module.component.jade
@@ -1,6 +1,8 @@
 
 div(*ngIf="module")
+
   p {{ module.name }}
+  div.btn.btn-waves.floating-effect((click)="goBack()") Back
 
   div(*ngFor="let lesson of module.lessons")
     p {{ lesson.name }}
