--- a/src/index.jade
+++ b/src/index.jade
@@ -16,11 +16,9 @@ html(lang="en")
     title Art Of Metrics
   body
     my-app Loading...
-    script(src="https://code.jquery.com/jquery-3.1.1.min.js"
-      integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
-      crossorigin="anonymous")
+    script(src="https://code.jquery.com/jquery-2.1.1.js")
     script(
-      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.0/js/materialize.min.js")
+      src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.98.2/js/materialize.js")
     script(src="/vendor/ckeditor/ckeditor.js")
     script(src="https://js.stripe.com/v2/")
     script(src="https://js.stripe.com/v3/")
