--- a/src/client/courses/course-view.component.jade
+++ b/src/client/courses/course-view.component.jade
@@ -1,4 +1,4 @@
 
 div.loaded(*ngIf="course")
-  preview-course([course]="course" *ngIf="!isSubscribed()")
-  take-course([course]="course" *ngIf="isSubscribed()")
+  preview-course([course]="course" *ngIf="!isSubscribed")
+  take-course([course]="course" *ngIf="isSubscribed")
