--- a/src/client/courses/student/view-course/preview-course.component.jade
+++ b/src/client/courses/student/view-course/preview-course.component.jade
@@ -21,10 +21,10 @@ div.container
 
       //- Subscribe
       div.section
-        div.btn.btn-waves((click)="openSubscribeModal()") Subscribe
+        div.btn.btn-waves((click)="startPayment()") Subscribe
       
-div#subscribe-modal.modal
-  div.modal-content
+div(*ngIf="subscribing")
+  div
     h4 Subscribe to {{ course.data.name }}
     div.btn.btn-waves((click)="addCreditCard()") Add Credit Card
     add-credit-card-form(*ngIf="state.addingCard" (onSubmitCard)="onSubmitCard($event)")
