add active module

--- a/src/client/courses/student/take-course/continue-course.component.jade
+++ b/src/client/courses/student/take-course/continue-course.component.jade
@@ -1,2 +1,3 @@
 div.container
   student-course-header([studentCourse]="studentCourse")
+  active-module([module]="activeModule" *ngIf="studentCourse")
