finish console quiz

--- a/src/client/courses/student/take-course/take-module/active-module.component.jade
+++ b/src/client/courses/student/take-course/take-module/active-module.component.jade
@@ -9,4 +9,4 @@ div
   
   //- drips
   div.row(*ngFor="let drip of activeLesson.drips")
-    take-drip([drip]="drip")
+    take-drip([drip]="drip" (moveOn)="nextDrip()")
