--- a/src/client/courses/student/take-course/continue-course.component.jade
+++ b/src/client/courses/student/take-course/continue-course.component.jade
@@ -1,4 +1,8 @@
 div.container
   student-course-header([studentCourse]="studentCourse")
   toggle-language((toggleLanguage)="setLanguage($event)")
-  active-module([module]="activeModule" [studentCourse]="studentCourse" *ngIf="studentCourse")
+  active-module(
+    [module]="activeModule" 
+    [studentCourse]="studentCourse"
+    (continueOn)="continueOn($payload)"
+    *ngIf="studentCourse")
